force-app/main/default/objects/DC_Dynamic_Value__mdt/DC_Dynamic_Value__mdt.object-meta.xml
<CustomObject>
    <label>DC_Dynamic_Value</label>
    <pluralLabel>DC_Dynamic_Values</pluralLabel>
</CustomObject>