force-app/main/default/objects/DC_Dynamic_Value__mdt/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gray</fullName>
                <default>true</default>
                <label>gray</label>
            </value>
            <value>
                <fullName>lightgray</fullName>
            </value>
            <value>
                <fullName>darkgray</fullName>
            </value>
            <value>
                <fullName>green</fullName>
            </value>
            <value>
                <fullName>orange</fullName>
            </value>
            <value>
                <fullName>red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>