force-app/main/default/objects/DC_Dynamic_Value__mdt/fields/DC_Field__c.field-meta.xml
<CustomField>
    <fullName>DC_Field__c</fullName>
    <label>DC_Field</label>
    <referenceTo>DC_Field__mdt</referenceTo>
    <relationshipLabel>DC_Dynamic_Values</relationshipLabel>
    <relationshipName>DC_Dynamic_Values</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>